// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserBlockView correctly renders default markup 1`] = `
<div
  className="user-block"
>
  <div
    className="user-block__avatar"
  >
    <a
      href="/mylist"
      onClick={[Function]}
    >
      <img
        alt="rus.nick"
        height="63"
        src="https://es31-server.appspot.com//wtw/static/avatar/9.jpg"
        width="63"
      />
    </a>
  </div>
</div>
`;

exports[`UserBlockView correctly renders signin markup 1`] = `
<div
  className="user-block"
>
  <a
    className="user-block__link"
    href="/login"
    onClick={[Function]}
  >
    Sign in
  </a>
</div>
`;
